🐛 Change class name from Edge to Edge2d in Delaunay implemenation

--- a/dnn/DataStructures/Delaunay_Linf/Makefile
+++ b/dnn/DataStructures/Delaunay_Linf/Makefile
@@ -129,6 +129,78 @@ delaunay/fast:
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/build
 .PHONY : delaunay/fast
 
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.o: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.o
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.o
+
+# target to build an object file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.o
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.o
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.i: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.i
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.i
+
+# target to preprocess a source file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.i
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.i
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.s: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.s
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.s
+
+# target to generate assembly for a file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.s
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.cpp.s
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.o: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.o
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.o
+
+# target to build an object file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.o
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.o
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.i: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.i
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.i
+
+# target to preprocess a source file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.i
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.i
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.s: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.s
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.s
+
+# target to generate assembly for a file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.s
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.cpp.s
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.o: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.o
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.o
+
+# target to build an object file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.o
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.o
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.i: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.i
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.i
+
+# target to preprocess a source file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.i
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.i
+
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.s: Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.s
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.s
+
+# target to generate assembly for a file
+Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/delaunay.dir/build.make CMakeFiles/delaunay.dir/Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.s
+.PHONY : Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.cpp.s
+
 externals/quadedge-basic/quadedge.o: externals/quadedge-basic/quadedge.cpp.o
 .PHONY : externals/quadedge-basic/quadedge.o
 
@@ -186,6 +258,15 @@ help:
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
 	@echo "... delaunay"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.o"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.i"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Edge.s"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.o"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.i"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Graph.s"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.o"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.i"
+	@echo "... Users/chaeyoon/AlgorithmsLab_Dropbox/정채윤/postechDNN/dnn/Algorithms/ESP_plane/Point.s"
 	@echo "... externals/quadedge-basic/quadedge.o"
 	@echo "... externals/quadedge-basic/quadedge.i"
 	@echo "... externals/quadedge-basic/quadedge.s"
