--- a/dnn/Examples/DNNDemo/DNNDemo/DNNDemo.vcxproj
+++ b/dnn/Examples/DNNDemo/DNNDemo/DNNDemo.vcxproj
@@ -211,6 +211,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AddDialog.h" />
     <ClInclude Include="DNNDemo.h" />
     <ClInclude Include="DNNDemoDlg.h" />
     <ClInclude Include="framework.h" />
@@ -221,6 +222,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AddDialog.cpp" />
     <ClCompile Include="DNNDemo.cpp" />
     <ClCompile Include="DNNDemoDlg.cpp" />
     <ClCompile Include="Object.cpp" />
