--- a/dnn/Examples/DNNDemo/DNNDemo/DNNDemo.vcxproj.filters
+++ b/dnn/Examples/DNNDemo/DNNDemo/DNNDemo.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="AddDialog.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="DNN_DS.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DNNDemo.cpp">
@@ -60,6 +63,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="AddDialog.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DNN_DS.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
