--- a/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj.filters
+++ b/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="Red Black Tree.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="RBtree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="persistent.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Test.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
