--- a/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj.filters
+++ b/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="Red Black Tree.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="RBtree.h">
+    <ClInclude Include="RBTree_new.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
