:arrow_up:Build persistent RBTree

--- a/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj
+++ b/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="persistent.h" />
     <ClInclude Include="RBTree_new.h" />
     <ClInclude Include="Red Black Tree.h" />
+    <ClInclude Include="simple_persistent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test.cpp" />
