--- a/dnn/NearestNeighbor/ENN/DCEL/Makefile
+++ b/dnn/NearestNeighbor/ENN/DCEL/Makefile
@@ -1,7 +1,7 @@
 all: main.exe
 
-main.exe : main.o DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o
-	g++ -o main.exe main.o DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o
+main.exe : main.o DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o
+	g++ -o main.exe main.o DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o
 
 main.o : main.cpp DCEL.h DCEL_IO.h AVLTree.h DCEL_IO.h Point.h Edge.h
 	g++ -o main.o -c main.cpp -std=c++17
@@ -12,7 +12,7 @@ DCEL_IO.o : DCEL_IO.cpp DCEL.h
 DCEL.o : DCEL.cpp DCEL.h Edge.h Point.h Vector.h AVLTree.h DCEL_operation.h
 	g++ -o DCEL.o -c DCEL.cpp -std=c++17
 
-DCEL_operation.o : DCEL_operation.cpp DCEL.h
+DCEL_operation.o : DCEL_operation.cpp DCEL.h Vector.h
 	g++ -o DCEL_operation.o -c DCEL_operation.cpp -std=c++17
 
 Vector.o : Vector.cpp Vector.h Point.h Edge.h
