:arrow_up:Make point location data structure on DCEL

--- a/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj
+++ b/dnn/DataStructures/PersistentRBTree/PersistentRBTree.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="persistent.h" />
+    <ClInclude Include="RBtree.h" />
     <ClInclude Include="RBTree_new.h" />
     <ClInclude Include="Red Black Tree.h" />
     <ClInclude Include="simple_persistent.h" />
