--- a/dnn/DataStructures/PointLocation/PointLocation.vcxproj.filters
+++ b/dnn/DataStructures/PointLocation/PointLocation.vcxproj.filters
@@ -18,18 +18,18 @@
     <ClCompile Include="Location.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\DCEL\DCEL.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\DCEL\Point.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\DCEL\Edge.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Location.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\DCEL\DCEL.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\DCEL\Edge.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="..\DCEL\Point.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
