:art: build strong 1-conforming subdivision and ouput as DCEL

--- a/dnn/NearestNeighbor/ENN/C_Subidivision/Makefile
+++ b/dnn/NearestNeighbor/ENN/C_Subidivision/Makefile
@@ -11,7 +11,7 @@ $(SUBDIRS):
 main.exe : main.o C_Subdivision.o
 	g++ -o main.exe main.o C_Subdivision.o ./DCEL/DCEL_lib.a
 
-main.o : main.cpp C_Subdivision.h
+main.o : main.cpp C_Subdivision.h DCEL/DCEL.h DCEL/point.h
 	g++ -o main.o -c main.cpp -std=c++17
 
 C_Subdivision.o : C_Subdivision.cpp Disjoint_Set.h
