--- a/dnn/NearestNeighbor/ENN/C_Subidivision/DCEL/Makefile
+++ b/dnn/NearestNeighbor/ENN/C_Subidivision/DCEL/Makefile
@@ -1,7 +1,7 @@
-all: DCEL_lib.a DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o
+all: DCEL_lib.a DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o Polygon.o
 
-DCEL_lib.a : DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o
-	ar rscv DCEL_lib.a DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o
+DCEL_lib.a : DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o Polygon.o
+	ar rscv DCEL_lib.a DCEL_operation.o DCEL_IO.o DCEL.o Edge.o Point.o Vector.o Polygon.o
 
 DCEL_IO.o : DCEL_IO.cpp DCEL.h 
 	g++ -o DCEL_IO.o -c DCEL_IO.cpp -std=c++17
@@ -19,7 +19,10 @@ Edge.o : Edge.cpp Edge.h Point.h
 	g++ -o Edge.o -c Edge.cpp -std=c++17
 
 Point.o : Point.cpp Point.h
-	g++ -o Point.o -c Point.cpp
+	g++ -o Point.o -c Point.cpp -std=c++17
+
+Polygon.o : Polygon.cpp Polygon.h
+	g++ -o Polygon.o -c Polygon.cpp -std=c++17
 
 clean :
 	del *.o *.a
